--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main class="flex">
         <article class = "main__article">
-            <img class = "main__article-img" src="/images/image-product-mobile.jpg" alt="Perfume Image">
+            <img class = "main__article-img" src="image-product-mobile.jpg" alt="Perfume Image">
             <p class="main__article-p1">P E R F U M E</p>
             <h1> Gabrielle Essence Eau De Parfum</h1>
             <p class="main__article-p2"> A floral, solar and voluptuos interpretation composed by Olivier Polge, Perfumer-<br>
